--- a/web/style/estilo.css
+++ b/web/style/estilo.css
@@ -22,14 +22,22 @@ h1{
     animation-name: titulo;
     animation-duration: 5s;
 }
+
+a{
+    text-decoration: none;
+    color: #CE8B25;
+}
+
+q{
+    top: 10px;
+}
+
 .assunto h2{
     margin: 0px;
     font-size: 40px;
 }
 
 .assunto a{
-    text-decoration: none;
-    color: #CE8B25;
     transition: 0.3s ease-in-out;
 }
 
@@ -51,14 +59,88 @@ h1{
     border: 1px #B7B7B7 solid;
     margin-bottom: 5px;
 }
-.cadastro {
+.topico{
     position: relative;
-    margin: 0 auto;
-    width: 290px;
+    width: 515px;
     padding: 15px;
     transition: 0.3s all ease-in-out;
     border-radius: 10px;
     border: 1px #B7B7B7 solid;
+    margin-bottom: 5px;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.topico h2{
+    margin: 0px;
+    font-size: 40px;
+}
+
+.topico a{
+    transition: 0.3s ease-in-out;
+}
+.cadastro {
+    position: relative;
+    width: 600px;
+    margin: 0 auto;
+    padding: 15px;
+    transition: 0.3s all ease-in-out;
+    border-radius: 10px;
+    border: 1px #B7B7B7 solid;
+    height: 205px;
+    top: 40px;
+    margin-bottom: 90px;
+}
+.cadastro h2{
+    margin: 10px;
+    color: #57A29F;
+}
+
+.nometitulo{
+    float: left;
+    height: 120px;
+    width: 300px;
+}
+
+.pergunta{
+    width: 285px;
+    float: right;
+    margin-top: -20px;
+}
+
+.dono{
+    border: 1px solid;
+    height: 50px;
+    width: 600px;
+    text-align: center;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.perguntadono{
+    text-align: center;
+    border-bottom: 1px solid;
+    width: 622px;
+    margin: 0 auto;
+}
+
+.resposta{
+    margin: 0 auto;
+    width: 622px;
+    border-bottom: 1px solid;
+    padding: 20px;
+}
+
+.respostadono{
+    border: 1px solid;
+    width: 160px;
+    padding: 12px;
+}
+
+.voltar{
+    border: 1px solid;
+    padding: 20px;
+    left: 10px;
 }
 
 label {
@@ -98,7 +180,10 @@ input[type=submit] {
 }
 /*----------------------- Animations --------------------------*/
 
-.cadastro, .assunto:hover{
+.topico:hover{
+    box-shadow: 2px 2px 10px rgba(10, 51, 103, 0.67);
+}
+.assunto:hover{
     box-shadow: 2px 2px 10px rgba(10, 51, 103, 0.67);
 }
 
@@ -124,3 +209,94 @@ input[type=submit]:hover {
     0%   {opacity:0.0; padding: 5px 6px 5px 300px;}
     100% {opacity:1; padding: 5px 6px 5px 70px;}
 }
+
+/* ============================================================================================================================
+== BUBBLE WITH AN ISOCELES TRIANGLE
+** ============================================================================================================================ */
+
+/* THE SPEECH BUBBLE
+------------------------------------------------------------------------------------------------------------------------------- */
+
+.triangle-isosceles {
+  position:relative;
+  padding:15px;
+  margin:1em 0 3em;
+  color:#000;
+  background:#B7B7B7; /* default background for browsers without gradient support */
+  /* css3 */
+  -webkit-border-radius:10px;
+  -moz-border-radius:10px;
+  border-radius:10px;
+}
+
+
+
+/* Variant : for left/right positioned triangle
+------------------------------------------ */
+
+.triangle-isosceles.left {
+  margin-left:50px;
+  background:#DCDCDC;
+  border: 1px solid #51A9A5;
+}
+
+/* Variant : for right positioned triangle
+------------------------------------------ */
+
+.triangle-isosceles.right {
+  margin-right:50px;
+  background:#f3961c;
+}
+
+/* THE TRIANGLE
+------------------------------------------------------------------------------------------------------------------------------- */
+
+/* creates triangle */
+.triangle-isosceles:after {
+  content:"";
+  position:absolute;
+  bottom:-15px; /* value = - border-top-width - border-bottom-width */
+  left:50px; /* controls horizontal position */
+  border-width:15px 15px 0; /* vary these values to change the angle of the vertex */
+  border-style:solid;
+  border-color:#f3961c transparent;
+  /* reduce the damage in FF3.0 */
+  display:block;
+  width:0;
+}
+
+/* Variant : top
+------------------------------------------ */
+
+.triangle-isosceles.top:after {
+  top:-15px; /* value = - border-top-width - border-bottom-width */
+  right:50px; /* controls horizontal position */
+  bottom:auto;
+  left:auto;
+  border-width:0 15px 15px; /* vary these values to change the angle of the vertex */
+  border-color:#51A9A5 transparent;
+}
+
+/* Variant : left
+------------------------------------------ */
+
+.triangle-isosceles.left:after {
+  top:16px; /* controls vertical position */
+  left:-50px; /* value = - border-left-width - border-right-width */
+  bottom:auto;
+  border-width:10px 50px 10px 0;
+  border-color:transparent #51A9A5;
+}
+
+/* Variant : right
+------------------------------------------ */
+
+.triangle-isosceles.right:after {
+  top:16px; /* controls vertical position */
+  right:-50px; /* value = - border-left-width - border-right-width */
+  bottom:auto;
+  left:auto;
+  border-width:10px 0 10px 50px;
+  border-color:transparent #51A9A5;
+}
+
